# speedrun-wiki-sync

./: .gitignore  README.md  pyproject.toml
configs/: zeldawiki.yaml  zeldawiki_wikiterms.json
mappings/zeldawiki/: a_link_to_the_past.json  a_link_to_the_past_fs_gba.json  breath_of_the_wild.json  bs_zelda.json  bs_zelda_3.json  cadence_of_hyrule.json  echoes_of_wisdom.json  faces_of_evil.json  four_swords_adventure.json  four_swords_anniversary.json  four_swords_gba.json  hyrule_warriors.json  hyrule_warriors_age_of_calamity.json  hyrule_warriors_age_of_imprisonment.json  hyrule_warriors_definitive.json  hyrule_warriors_legends.json  legend_of_zelda.json  link_between_worlds.json  links_awakening.json  links_awakening_dx.json  links_awakening_switch.json  links_crossbow_training.json  majoras_mask.json  majoras_mask_3d.json  minish_cap.json  ocarina.json  ocarina_3d.json  ocarina_mq.json  oracle_linked.json  oracle_of_ages.json  oracle_of_seasons.json  phantom_hourglass.json  skyward_sword.json  skyward_sword_hd.json  spirit_tracks.json  tears_of_the_kingdom.json  tingle_balloon_trip_of_love.json  tingle_freshly_picked.json  tingles_balloon_fight_ds.json  triforce_heroes.json  (+9 more)
mappings/zeldawiki/curation/: botw.json  bs_zelda.json  cadence_of_hyrule.json  four_swords_anniversary.json  four_swords_gba.json  hyrule_warriors.json  hyrule_warriors_age_of_imprisonment.json  ladx.json  links_crossbow_training.json  lozst.json  ocarina.json  (+5 more)
scripts/: gen_mapping.py  run_zeldawiki.py
src/srwikisync/: cli.py  formatter.py  speedrun_api.py  updater.py  wiki.py  wikiterms.py
